--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://yanikrijgersberg.github.io/portfolio-website",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+   "deploy": "gh-pages -d dist --no-history --add"
   },
   "dependencies": {
     "emailjs-com": "^3.2.0",
