--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-website",
-  "homepage": "https://yaniknijgersberg.github.io/portfolio-website",
+  "homepage": "https://YanikRijgersberg.github.io/portfolio-website",
   "private": true,
   "version": "0.0.0",
   "type": "module",
